--- a/LSDP/languages/it.json
+++ b/LSDP/languages/it.json
@@ -36,20 +36,22 @@
     "info_capacity": "80 coperti"
   },
   "reservation": {
-    "map_notice": "Mostra mappa<br><small>Il tuo indirizzo IP sarà inviato a Google Maps.</small>",
-    "location": "Golfe Juan",
-    "address": "24 Avenue De La Gare, 06220 Vallauris, Francia",
-    "make_reservation": "Prenota il tuo<br>Tavolo",
-    "opening_hours": "I nostri<br>Orari di apertura",
-    "payment_options": "Opzioni di pagamento<br>disponibili",
+    "map_title": "Mostra mappa",
+    "map_notice": "Il tuo indirizzo IP sarà inviato a Google Maps.",
+    "address_title": "Golfe Juan", 
+    "address": "24 Av. de la Gare, 06220 Vallauris",
+    "booking_title": "Prenota il tuo<br>Tavolo",
+    "phone": "+33422917748",
+    "hours_title": "I nostri<br>Orari di apertura",
     "monday": "Lunedì",
     "tuesday": "Martedì",
-    "wednesday": "Mercoledì",
+    "wednesday": "Mercoledì", 
     "thursday": "Giovedì",
     "friday": "Venerdì",
     "saturday": "Sabato",
     "sunday": "Domenica",
     "closed": "chiuso",
+    "payment_title": "Opzioni di pagamento<br>disponibili",
     "cash": "Contanti",
     "contactless": "Pagamento contactless",
     "debit_card": "Carta di debito"
