--- a/LSDP/languages/pt.json
+++ b/LSDP/languages/pt.json
@@ -38,7 +38,7 @@
   "reservation": {
     "map_notice": "Mostrar mapa<br><small>Seu endereço IP será enviado ao Google Maps.</small>",
     "location": "Golfe Juan",
-    "address": "24 Avenue De La Gare, 06220 Vallauris, França",
+    "address": "24 Av. de la Gare, 06220 Vallauris",
     "make_reservation": "Faça sua<br>Reserva",
     "opening_hours": "Nossos<br>Horários de funcionamento",
     "payment_options": "Opções de pagamento<br>disponíveis",
