--- a/LSDP/languages/ru.json
+++ b/LSDP/languages/ru.json
@@ -38,7 +38,7 @@
   "reservation": {
     "map_notice": "Показать карту<br><small>Ваш IP-адрес будет отправлен в Google Maps.</small>",
     "location": "Гольф Жуан",
-    "address": "24 Avenue De La Gare, 06220 Vallauris, Франция",
+    "address": "24 Av. de la Gare, 06220 Vallauris",
     "make_reservation": "Сделайте свой<br>Заказ столика",
     "opening_hours": "Наши<br>Часы работы",
     "payment_options": "Доступные<br>способы оплаты",
