--- a/LSDP/languages/ua.json
+++ b/LSDP/languages/ua.json
@@ -38,7 +38,7 @@
   "reservation": {
     "map_notice": "Показати карту<br><small>Ваша IP-адреса буде надіслана до Google Maps.</small>",
     "location": "Гольф Жуан",
-    "address": "24 Avenue De La Gare, 06220 Vallauris, Франція",
+    "address": "24 Av. de la Gare, 06220 Vallauris",
     "make_reservation": "Зробіть своє<br>Бронювання",
     "opening_hours": "Наші<br>Години роботи",
     "payment_options": "Доступні<br>способи оплати",
