--- a/LSDP/languages/it.json
+++ b/LSDP/languages/it.json
@@ -38,10 +38,11 @@
   "reservation": {
     "map_title": "Mostra mappa",
     "map_notice": "Il tuo indirizzo IP sarà inviato a Google Maps.",
-    "address_title": "Golfe Juan", 
+    "address_title": "Vallauris", 
     "address": "24 Av. de la Gare, 06220 Vallauris",
+    "section_title": "Prenotazione",
     "booking_title": "Prenota il tuo<br>Tavolo",
-    "phone": "+33422917748",
+    "phone": "+33 4 22 91 77 48",
     "hours_title": "I nostri<br>Orari di apertura",
     "monday": "Lunedì",
     "tuesday": "Martedì",
@@ -96,7 +97,7 @@
     "champagne_bottle": "Champagne V. Pelletier Brut (Bottiglia 75 cl)",
     "champagne_tsarine": "Champagne Tsarine Brut (Bottiglia 75 cl)",
     "beers": "Le nostre Birre:",
-    "panache": "Panaché/ Monaco (25 cl)",
+    "panache": "Birra 1664 bionda (25 cl)",
     "beer_1664": "Birra 1664 bionda (25 cl)",
     "beer_fada": "Birra Fada bionda/ blanche o scura (33 cl)",
     "desperados": "Desperados (33 cl)",
