--- a/LSDP/languages/jp.json
+++ b/LSDP/languages/jp.json
@@ -11,16 +11,16 @@
     "subtitle": "プロヴァンスの中心で忘れられない食体験を"
   },
   "about": {
-    "history_title": "受け継がれる伝統",
+    "history_title": "受け継がれる歴史",
     "history_highlight": "伝統と卓越",
     "history_p1": "創業以来、私たちは非日常の美食体験をお届けしてきました。伝統の技にインスピレーションを得て、熟練のシェフが丁寧に料理を仕立てます。",
     "history_h3_1": "料理哲学",
-    "history_p2": "一皿一皿に文化的背景を宿し、味わいの一瞬一瞬が心に響く体験となるよう心を尽くしています。厳選された地元食材を用い、品質に妥協はありません。",
+    "history_p2": "一皿一皿に物語を宿し、味わいの一瞬一瞬が心に響く体験となるよう心を尽くしています。厳選された地元食材を用い、品質に妥協はありません。",
     "history_h3_2": "品質への約束",
     "history_p3": "何世紀にも渡り磨かれた技法と現代の感性を融合させ、気品ある空間で驚きと感動の食体験をご提供します。",
     "services_title": "おもてなし",
     "services_highlight": "パーソナルサービス",
-    "services_p1": "私たちのチームはお一人おひとりに寄り添った丁寧なサービスをお約束します。記念日のディナー、ビジネス会食、ご家族の集まりまで、最適な時間を演出いたします。",
+    "services_p1": "記念日のディナー、ビジネス会食、ご家族の集まりまで、最適な時間を演出いたします。",
     "services_h3_1": "プライベートイベント",
     "services_p2": "大切なひと時のために、上質なプライベート空間と上級のサービスをご用意します。",
     "services_h3_2": "ご予約",
@@ -36,12 +36,14 @@
     "info_capacity": "80席"
   },
   "reservation": {
-    "map_notice": "地図を表示<br><small>IPアドレスがGoogle Mapsに送信されます。</small>",
-    "location": "ゴルフ・ジュアン",
+    "map_title": "地図を表示",
+    "map_notice": "IPアドレスがGoogle Mapsに送信されます。",
+    "address_title": "ヴァロリス",
     "address": "24 Av. de la Gare, 06220 Vallauris",
-    "make_reservation": "ご予約<br>承ります",
-    "opening_hours": "営業<br>時間",
-    "payment_options": "利用可能な<br>お支払い方法",
+    "section_title": "ご予約",
+    "booking_title": "ご予約<br>承ります",
+    "phone": "+33 4 22 91 77 48",
+    "hours_title": "営業<br>時間",
     "monday": "月曜日",
     "tuesday": "火曜日",
     "wednesday": "水曜日",
@@ -50,6 +52,7 @@
     "saturday": "土曜日",
     "sunday": "日曜日",
     "closed": "定休日",
+    "payment_title": "利用可能な<br>お支払い方法",
     "cash": "現金",
     "contactless": "非接触決済",
     "debit_card": "デビットカード"
