--- a/LSDP/languages/es.json
+++ b/LSDP/languages/es.json
@@ -38,10 +38,11 @@
   "reservation": {
     "map_title": "Mostrar mapa",
     "map_notice": "Su dirección IP será enviada a Google Maps.",
-    "address_title": "Golfe Juan",
+    "address_title": "Vallauris",
     "address": "24 Av. de la Gare, 06220 Vallauris",
+    "section_title": "Reservas",
     "booking_title": "Haga su<br>Reserva",
-    "phone": "+33422917748",
+    "phone": "+33 4 22 91 77 48",
     "hours_title": "Nuestros<br>Horarios de apertura",
     "monday": "Lunes",
     "tuesday": "Martes",
@@ -57,7 +58,7 @@
     "debit_card": "Tarjeta de débito"
   },
   "menu": {
-    "title": "Nuestra Carta",
+    "title": "Nuestro Menú",
     "show_more": "Ver la carta completa",
     "show_less": "Reducir la carta",
     "show_more_drinks": "Ver más bebidas",
